# anonyma

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  README.md
backend/.sqlx/: query-022470960223a8e82a835232931b7de66600082163fa8a7ecd65349c4bb0aaa3.json  query-07742c1a33903457a51a4a863a1b3b62eb4e2df9af6cd25750865ad02c26814c.json  query-295313238e86276949de4b6297e6bc7b532697468a5a6bd8e962d8cee7ba9f0e.json  query-415d207a6df70967f63793a67c5093f01b59630da82c3b67eb3f7134b9e7f813.json  query-421ab9d296f115119aefa69c4b8880a1de99a4aab492e30f3a39748478d3cc89.json  query-47f7b7b973f613b8615dc7322226bafaa1e9519a2debd533e56022245d312085.json  query-6da45ef7be71ac89c8bba5620c45a633ad690e4f5cc5218f3227ba19dc40369e.json  query-89298ba6f3304b36bb413c5bc5fcd5c9550e30d25129c571e62021a5fa9b9f73.json  query-9d3cb8570fd424c3de084b796dd8e2542bbe2c256de2ed03c0c693a3a206de1c.json
backend/migrations/: 20240101000000_complete_schema.sql  20240101000000_init.sql
backend/src/: api.rs  auth.rs  config.rs  db.rs  main.rs  state.rs
docs/: ARCHITECTURE.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/sounds/: notification-info.txt
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentCard.tsx  BroadcastComments.tsx  ConversationView.tsx  DashboardSidebar.tsx  EmojiPickerComponent.tsx  MessageActions.tsx  MessageSearch.tsx  OnboardingTour.tsx  ParticleBackground.tsx  SendMessageModal.tsx  ThemeToggle.tsx  TypingIndicator.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useDrafts.ts  useNotificationSound.ts  useRealtimeEvents.ts  useTheme.ts  useTypingIndicator.ts
frontend/src/lib/: api.ts  mock-data.ts
frontend/src/pages/: BlockedUsersPage.tsx  BroadcastPage.tsx  DashboardLayout.tsx  InboxPage.tsx  Index.tsx  LoginPage.tsx  SettingsPage.tsx  UsersPage.tsx
frontend/src/providers/: AuthProvider.tsx  ThemeProvider.tsx
