[package]
name = "anonyma_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework - Upgrading to 0.8
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower-cookies = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "time", "chrono"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

# Environment & Logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication - Using Facade Crate
authkestra = { version = "0.1", features = ["axum", "github", "session", "flow"] }

argon2 = "0.5"
rand = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
