[package]
name = "anonyma_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework - Upgrading to 0.8
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower-cookies = "0.11"
tower = { version = "0.5", features = ["limit", "buffer"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "time", "chrono"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
time = { version = "0.3.47", features = ["serde", "formatting", "parsing", "serde-well-known"] }

# Environment & Logging
dotenvy = "0.15"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication - Using Facade Crate
authkestra = { version = "0.1", features = ["axum", "github", "session", "flow"] }

argon2 = "0.5"

# Utilities
futures-util = "0.3"

